[gd_scene load_steps=18 format=3 uid="uid://c8oditm46yl86"]

[ext_resource type="Script" uid="uid://2o2x7ktgf3mm" path="res://mainmenu/main_menu.gd" id="1_skept"]
[ext_resource type="Texture2D" uid="uid://b53a3txhsjsec" path="res://mainmenu/backgroundimage.png" id="2_jh8tq"]
[ext_resource type="Texture2D" uid="uid://b6xj0jkae86mn" path="res://mainmenu/button_normal.png" id="3_6f8v3"]
[ext_resource type="Texture2D" uid="uid://bddusuyc6ic6w" path="res://sprites/particles/leaf.webp" id="3_la1qf"]
[ext_resource type="Texture2D" uid="uid://bfdi4mrqgfobc" path="res://mainmenu/button_pressed.png" id="4_ape7v"]
[ext_resource type="Texture2D" uid="uid://d10blkakyfdag" path="res://mainmenu/button_hover.png" id="5_5xekc"]
[ext_resource type="FontFile" uid="uid://du1y0y7uge5vx" path="res://mainmenu/Kenney Pixel.ttf" id="6_f5at7"]
[ext_resource type="FontFile" uid="uid://bqeud2wafhg81" path="res://mainmenu/Kenney Mini Square.ttf" id="7_luq4s"]

[sub_resource type="Curve" id="Curve_ni4cm"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 36.4045), 104.783, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wxggw"]
curve = SubResource("Curve_ni4cm")

[sub_resource type="Curve" id="Curve_0haln"]
_data = [Vector2(0, 0.348315), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_y2hd3"]
curve = SubResource("Curve_0haln")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5f2nu"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(350, 1, 1)
angle_min = 1.07288e-05
angle_max = 35.0
angle_curve = SubResource("CurveTexture_wxggw")
inherit_velocity_ratio = 15.0
initial_velocity_min = 28.74
initial_velocity_max = 28.74
gravity = Vector3(20, 98, 0)
scale_curve = SubResource("CurveTexture_y2hd3")

[sub_resource type="Animation" id="Animation_wvchv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.00392157)]
}

[sub_resource type="Animation" id="Animation_d0nky"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.00392157)]
}

[sub_resource type="Animation" id="Animation_k4fr1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/FadeRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4fr1"]
_data = {
&"RESET": SubResource("Animation_wvchv"),
&"fade_in": SubResource("Animation_d0nky"),
&"fade_out": SubResource("Animation_k4fr1")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 4.0
offset_right = -6.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skept")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.99991
offset_top = -6.10352e-05
offset_right = 2.99988
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2

[node name="Backgroundimage" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(573.017, 311.756)
rotation = -0.0228583
scale = Vector2(1.5921, 1.45634)
texture = ExtResource("2_jh8tq")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Backgroundimage"]
modulate = Color(4.87324e-06, 0.408274, 0.0483681, 1)
position = Vector2(-65.4296, -266.585)
amount = 7
texture = ExtResource("3_la1qf")
lifetime = 5.92
speed_scale = 0.85
process_material = SubResource("ParticleProcessMaterial_5f2nu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504348
anchor_top = 0.0570988
anchor_right = 0.504348
anchor_bottom = 0.138889
offset_left = -107.0
offset_top = 237.0
offset_right = 514.0
offset_bottom = 993.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.343146, 0.32)

[node name="Startbutton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
texture_normal = ExtResource("3_6f8v3")
texture_pressed = ExtResource("4_ape7v")
texture_hover = ExtResource("5_5xekc")

[node name="Label" type="Label" parent="VBoxContainer/Startbutton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.25
offset_bottom = 31.25
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_f5at7")
theme_override_font_sizes/font_size = 100
text = "Start
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_6f8v3")
texture_pressed = ExtResource("4_ape7v")
texture_hover = ExtResource("5_5xekc")

[node name="Label" type="Label" parent="VBoxContainer/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_f5at7")
theme_override_font_sizes/font_size = 100
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exitbutton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_6f8v3")
texture_pressed = ExtResource("4_ape7v")
texture_hover = ExtResource("5_5xekc")

[node name="Label" type="Label" parent="VBoxContainer/Exitbutton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.375
offset_bottom = -27.625
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_f5at7")
theme_override_font_sizes/font_size = 100
text = "Exit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -437.0
offset_top = 45.0
offset_right = 438.0
offset_bottom = 202.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.836307, 0.616362, 0.300037, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_luq4s")
theme_override_font_sizes/font_size = 125
text = "Torch N Steel"

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k4fr1")
}
playback_auto_capture_ease_type = 2

[node name="FadeRect" type="ColorRect" parent="Transition"]
modulate = Color(1, 1, 1, 0.00392157)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/Startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exitbutton" to="." method="_on_exitbutton_pressed"]
